--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -17,6 +17,21 @@
           </td>
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
+
+          <% if @book.favorited_by?(current_user) %>
+            <td>
+              <%= link_to book_favorite_path(@book.id), method: :delete do %>
+                ♥<%= @book.favorites.count %> いいね
+              <% end %>
+            </td>
+          <% else %>
+            <td>
+              <%= link_to book_favorite_path(@book.id), method: :post do %>
+                ♡<%= @book.favorites.count %> いいね
+              <% end %>
+            </td>
+          <% end %>
+
           <% if @book.user == current_user %>
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
