--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -17,6 +17,7 @@
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
         
+        <%# いいね機能 %>
         <% if book.favorited_by?(current_user) %>
           <td>
             <%= link_to book_favorite_path(book.id), method: :delete do %>
@@ -30,6 +31,11 @@
             <% end %>
           </td>
         <% end %>
+
+        <%# コメント数 %>
+          <td>
+            <p>コメント件数：<%= book.book_comments.count %></p>
+          </td>
       </tr>
     <% end %>
   </tbody>
