--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,6 +18,13 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
 
+          <%# 編集・削除ボタン %>
+          <% if @book.user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <% end %>
+
+          <%# いいね機能 %>
           <% if @book.favorited_by?(current_user) %>
             <td>
               <%= link_to book_favorite_path(@book.id), method: :delete do %>
@@ -32,12 +39,33 @@
             </td>
           <% end %>
 
-          <% if @book.user == current_user %>
-            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-          <% end %>
+          <%# コメント数 %>
+          <td>
+            <p>コメント件数：<%= @book.book_comments.count %></p>
+          </td>
         </tr>
       </table>
+
+      <%# コメント欄 %>
+      <ul>
+        <% @book.book_comments.each do |book_comment| %>
+          <li>
+            <%= image_tag book_comment.user.get_profile_image, size:"50x50" %>
+            <%= book_comment.user.name %>
+            <%= book_comment.created_at.strftime('%Y/%m/%d') %>
+            <%= book_comment.comment %>
+          </li>
+        <% end %>
+      </ul>
+
+      <%# コメント投稿フォーム %>
+      <div>
+        <%# 配列でインスタンス変数を2つ指定している。コメントは、bookに結びついたbook_commentであるため、book_commentをcreateするためのリクエストは、ルーティングもネスト（親子関係）しているため、2つの情報が必要になる。 %>
+        <%= form_with model: [@book, @book_comment] do |f| %>
+          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+          <%= f.submit "送信する" %>
+        <% end %>
+      </div>
     </div>
   </div>
 </div>
