--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -18,56 +18,30 @@
           <td><%= link_to @book.title, @book %></td>
           <td><%= @book.body %></td>
 
-          <%# 編集・削除ボタン %>
-          <% if @book.user == current_user %>
-            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
-            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
-          <% end %>
-
           <%# いいね機能 %>
-          <% if @book.favorited_by?(current_user) %>
-            <td>
-              <%= link_to book_favorite_path(@book.id), method: :delete do %>
-                ♥<%= @book.favorites.count %> いいね
-              <% end %>
-            </td>
-          <% else %>
-            <td>
-              <%= link_to book_favorite_path(@book.id), method: :post do %>
-                ♡<%= @book.favorites.count %> いいね
-              <% end %>
-            </td>
-          <% end %>
+          <td>
+            <%= render "favorites/btn", book: @book %>
+          </td>
 
           <%# コメント数 %>
           <td>
             <p>コメント件数：<%= @book.book_comments.count %></p>
           </td>
+
+          <%# 編集・削除ボタン %>
+          <% if @book.user == current_user %>
+            <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
+            <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
+          <% end %>
         </tr>
       </table>
 
       <%# コメント欄 %>
-      <ul>
-        <% @book.book_comments.each do |book_comment| %>
-          <li>
-            <%= image_tag book_comment.user.get_profile_image, size:"50x50" %>
-            <%= book_comment.user.name %>
-            <%= book_comment.created_at.strftime('%Y/%m/%d') %>
-            <%= book_comment.comment %>
-            <% if book_comment.user == current_user %>
-              <%= link_to "削除", book_book_comment_path(book_comment.book, book_comment), method: :delete %>
-            <% end %>
-          </li>
-        <% end %>
-      </ul>
+      <%= render "book_comments/index", book: @book %>
 
       <%# コメント投稿フォーム %>
       <div>
-        <%# 配列でインスタンス変数を2つ指定している。コメントは、bookに結びついたbook_commentであるため、book_commentをcreateするためのリクエストは、ルーティングもネスト（親子関係）しているため、2つの情報が必要になる。 %>
-        <%= form_with model: [@book, @book_comment] do |f| %>
-          <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
-          <%= f.submit "送信する" %>
-        <% end %>
+        <%= render "book_comments/form", book: @book, book_comment: @book_comment %>
       </div>
     </div>
   </div>
