[Update]htmlビューファイル調整

--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -19,7 +19,7 @@
           <td><%= @book.body %></td>
 
           <%# いいね機能 %>
-          <td>
+          <td id="favorite_btn_<%= @book.id %>">
             <%= render "favorites/btn", book: @book %>
           </td>
 
