--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -25,7 +25,7 @@
 
           <%# コメント数 %>
           <td id="comment_counter">
-            <p>コメント件数：<%= @book.book_comments.count %></p>
+            <%= render "book_comments/counter", book: @book %>
           </td>
 
           <%# 編集・削除ボタン %>
