--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -33,6 +33,11 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', @book, method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
+
+          <%# 閲覧数 %>
+          <td>
+            <%= render "shared/views_count", book: @book %>
+          </td>
         </tr>
       </table>
 
