[Update]総閲覧数表示

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -9,6 +9,9 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <%= render 'books/index',books: @books %>
+      <p>
+        あなたの投稿したものたちは「<%= @total_views %>」人の人に読まれました。
+      </p>
     </div>
   </div>
 </div>
